Build results dataframe from sessions list file

--- a/analysis/Makefile
+++ b/analysis/Makefile
@@ -1,5 +1,8 @@
-sessions-list.md5: sessions-list.txt
-	md5sum sessions-list.txt > sessions-list.md5
+obj-stab-resp.csv: sessions-list.txt
+	if [ "$$(md5sum sessions-list.txt)" != "$$(cat sessions-list.md5)" ] ; then	\
+	    ./build-database.py ;							\
+	    md5sum sessions-list.txt > sessions-list.md5 ;				\
+	fi
 
 sessions-list.txt: FORCE
 	./list-sessions.py > sessions-list.txt
